# Antistas_Index

./: .gitignore  .isort.cfg  .pydeps  Antistasi_Index_goals.md  Antistasi_Index_notes.txt  MANIFEST.in  README.md  graph.gv  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
antistasindex/: __init__.py  cli.py
antistasindex/data/: standard_config_data.py
antistasindex/engine/: callbook_extender.py  config_reader.py  experimental_data_index.py  general_data_index.py  main_indexer.py  meta_data_index.py  printers.py
antistasindex/utility/: create_complete_ini.py  misc_data.py  misc_functions.py
antistasindex/utility/gidlogger_vend/: logger_functions.py
src/: __main__.py  cli.py
src/data/: config_template.ini  standard_config_data.py
src/engine/: config_reader.py  general_data_index.py  main_indexer.py  meta_data_index.py  printers.py
src/utility/: create_complete_ini.py  misc_functions.py
tools/: autoflake_file.cmd  create_venv.cmd  dropbox_ignore_venv.cmd  get-pip.py  log_pipe_create_venv.cmd  pipreq_clean.cmd  quick_pyinstaller_noconsole.bat  venv_activate_redirect.cmd
tools/quick_scripts/: rename_file_quick.py
