[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "antistasindex"
author = "Giddius"
home-page = "https://github.com/Giddius/Antistas_Index"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"
requires = [
    "checksumdir==1.2.0",
    "click==7.1.2",
    "et-xmlfile==1.0.1",
    "fuzzywuzzy==0.18.0",
    "jdcal==1.4.1",
    "Jinja2==2.11.2",
    "MarkupSafe==1.1.1",
    "openpyxl==3.0.5",
    "python-dotenv==0.14.0",
    "python-Levenshtein==0.12.0",
]

[tool.flit.scripts]
antistasidex_getconfig = "antistasindex.cli:create_configuration"
antistasidex = "antistasindex.cli:index_files"